<resources>
    <string name="app_name">DemoSQLite</string>
    <string name="TripName">Trip Name</string>
    <string name="TripDestination">Destination</string>
    <string name="TripDesc">Description</string>
    <string name="TripDate">Start Date:</string>
    <string name="TripEnd">End Date:</string>
    <string name="BtnAddTrip">Add Trip</string>
    <string name="require_risk_assessment">Require Risk Assessment</string>
    <string name="TOAST_TRIP_ADDED">Trip Added!</string>
    <string name="ERROR_ADD_TRIP_MSG">Error adding trip</string>
    <string name="BtnViewAllTrip">View All Trips</string>
    <string name="BtnAddNewTrip">Add New Trip</string>
    <string name="DateFormat">_ _ /_ _ /_ _ _ _</string>
    <string name="TripDeletedMsg">Trip Deleted</string>
    <string name="TripDeleteErrorMsg">Error in Deleting Trip</string>
    <string name="NoTripDataMsg">No Trips Info available</string>
    <string name="NoSelectedTripMsg">No Selected Trip</string>
    <string name="tripimage">TripImage</string>
    <string name="total_expense">Total Expense: $$$</string>
    <string name="capture_image">Capture Image</string>
    <string name="take_image">Take Image</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="trip_name">Trip Name:</string>
    <string name="desination">Desination:</string>
    <string name="required_assessment">Required Assessment:</string>
    <string name="checked_value">checked value</string>
    <string name="trip_desc">Desc:</string>
    <string name="requiredFieldMissing">Required Field is missing</string>
    <string name="defaultDate">JAN / 01 / 1111</string>
    <string name="endDateInvalid">End Date Invalid</string>
    <string name="imageAccepted">Image Accepted</string>
    <string name="no_image_captured">No Image Captured</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add_expense_to_trip">Add expense to Trip:</string>
    <string name="type_of_expenses">Type of Expense</string>
    <string name="amount_of_expense">Amount of Expense (VND)</string>
    <string name="time_of_expense">Time of Expense</string>
    <string name="addition_comment">Addition Comment</string>
    <string name="add_expense">Add Expense</string>
    <string name="VNDCurrency">%1$s VND</string>
    <string name="no_expense_data">No Expense Data</string>
    <string name="cannotFindTrip">Cannot find Trip data</string>
    <string name="TripID">TripID</string>
    <string name="expenseAdded">Expense added</string>
    <string name="errorAddExpense">Error adding Expense</string>
    <string name="defaultTime">00:00</string>
    <string name="searchtrip">SearchTrip</string>
    <string name="search_trip_name">Search Trip Name:</string>
    <string name="search_for_trip">Search for Trip</string>
    <string name="API_KEY">BW5XbytVLKyfc9WZnd59cN5TbX0g3SOZ9xUfuYAdgZ5zn30nQ52rq5YOsH2Uz9n0</string>
    <string name="upload_data_to_cloud">Upload Data to cloud</string>
</resources>