<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actitvities.ExpenseFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:clickable="false"
                android:text="@string/add_expense_to_trip"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_trip_name"
                android:clickable="false"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TripName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_expense_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/type_of_expenses"/>

            <EditText
                android:id="@+id/et_expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:hint="@string/amount_of_expense"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_of_expense"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_expense_date"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultDate"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_expense_time"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTime"/>

            </LinearLayout>

            <EditText
                android:id="@+id/et_expense_comment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/addition_comment"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>