<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_trip_name"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TripName"/>

        <EditText
            android:id="@+id/et_trip_destination"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TripDestination"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TripDate"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_trip_start"
                    android:layout_margin="10dp"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultDate"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TripEnd"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_trip_end"
                    android:layout_margin="10dp"
                    style="@style/Widget.AppCompat.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/defaultDate"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_risk_assessment"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/require_risk_assessment"/>

        <EditText
            android:id="@+id/et_trip_desc"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TripDesc"/>


    </LinearLayout>

</LinearLayout>