<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_expenses"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_expense_type"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_of_expense"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_expense_amount"
            android:inputType="number"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_expense"
            android:textStyle="bold"
            android:textSize="16sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_expense_date"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_height="wrap_content"
            android:text="@string/defaultDate"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_expense_time"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_height="wrap_content"
            android:text="@string/defaultTime"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_comment"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_expense_comment"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

    </LinearLayout>

</LinearLayout>