<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_expenses"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/popup_tv_expense_type"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_expenses"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_of_expense"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/popup_tv_expense_amount"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_of_expense"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_expense"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="10dp"
            android:id="@+id/popup_btn_expense_date"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultDate"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="10dp"
            android:id="@+id/popup_btn_expense_time"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultTime"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_comment"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/popup_tv_expense_comment"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/addition_comment"/>

    </LinearLayout>

</LinearLayout>