<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actitvities.TripDetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/trip_name"/>

                <TextView
                    android:clickable="false"
                    android:id="@+id/tv_trip_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:textSize="16sp"
                    android:text="@string/TripName"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/desination"/>

                <TextView
                    android:id="@+id/tv_trip_dest"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:textSize="16sp"
                    android:text="@string/TripDestination"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/TripDate"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_trip_start"
                        android:clickable="false"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/defaultDate"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TripEnd"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_trip_end"
                        android:clickable="false"
                        android:layout_margin="10dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/defaultDate"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/required_assessment"/>

                <CheckBox
                    android:id="@+id/cb_risk_assessment"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@+id/scrollView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/trip_desc"/>

                <TextView
                    android:id="@+id/tv_trip_desc"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"

                    android:text="@string/TripDesc"/>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_edit_trip"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_edit_24"/>

                <ImageButton
                    android:id="@+id/btn_add_trip"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_24"/>

                <ImageButton
                    android:id="@+id/btn_list_expense"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_list_alt_24"/>

                <ImageButton
                    android:id="@+id/btn_delete_trip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_delete_24"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>